2003-12-09  Choe Hwanjin  <krisna@people.kldp.org>
	* configure.in,
	  themes/MSWindows2000/Makefile.am,
	  themes/MSWindows2000/english.png,
	  themes/MSWindows2000/hangul.png,
	  themes/MSWindows2000/none.png,
	  themes/Makefile.am: MSWindows2000 테마 추가

2003-12-05  Choe Hwanjin  <krisna@people.kldp.org>
	* src/handler.c, src/ic.c, src/ic.h: add utf8_to_compound_text() func.
	  do not commit on ICReset, just send last preedit string

2003-12-03  Choe Hwanjin  <krisna@people.kldp.org>
	* src/ic.c:
	  PreeditPosition에서 preedit window를 spot location보다 한픽셀 뒤로 밂
	  (커서위치를 보이게 하기 위함)

2003-12-02  Choe Hwanjin  <krisna@people.kldp.org>
	* src/ic.c:
	    set overide-redirect to show preedit window correctly on Qt app

2003-11-29  Choe Hwanjin  <krisna@people.kldp.org>
	* po/ko.po: update po
	* ChangeLog: update ChangeLog
	* src/ui.c: set dialog variable to NULL when about window closed
	* src/ui.c: about window가 하나만 뜨게 함

	* release 0.11

2003-11-28  Choe Hwanjin  <krisna@people.kldp.org>
	* src/ic.c, src/server.c, src/server.h: gc를 ic별로 관리하는 대신
	  server에 기본 gc를 하나 만들고 그걸 사용하도록 함
	* AUTHORS, NEWS, TODO: 문서 업데이트
	* configure.in: prepare for version up
	* po/ko.po: 번역 업데이트
	* src/main.c, src/server.c, src/server.h, src/ui.c:
	xim 서버 종료시 gtk2 application들이 죽던 문제 해결, xim서버를
	정상적으로 종료함
	* po/Makevars: set variable MSGID_BUGS_ADDRESS
	* src/ui.c: update comment for parsing command line args routine

2003-11-27  Choe Hwanjin  <krisna@people.kldp.org>
	* src/candidate.c: candidate window에서 . 제거

2003-11-26  Choe Hwanjin  <krisna@people.kldp.org>
	* src/ui.c: rename function for root window event filtering

2003-11-25  Choe Hwanjin  <krisna@people.kldp.org>
	* src/main.c, src/nabi.h, src/server.c, src/ui.c:
	-s(--status-only) 옵션 추가(디버깅용도, 또는 상태 정보만 보여주기)

2003-11-24  Choe Hwanjin  <krisna@people.kldp.org>
	* src/main.c: 실수로 추가한 코드 제거 (server start 루틴 작동함)
	* src/main.c, src/ui.c: update main window
	* src/automata.c:
	세벌식 오토마타에서 잘못돼 있던 goto update를 goto insert로 수정,